// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`category snapshots disabled 1`] = `
<div
  className="category"
>
  <WithStyles(Typography)
    className="label"
  >
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "Category Label",
        }
      }
    />
  </WithStyles(Typography)>
  <Wrapped
    className="placeholder"
    disabled={true}
    grid={
      Object {
        "columns": 1,
        "rows": 1,
      }
    }
  />
</div>
`;

exports[`category snapshots incorrect 1`] = `
<div
  className="category"
>
  <WithStyles(Typography)
    className="label"
  >
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "Category Label",
        }
      }
    />
  </WithStyles(Typography)>
  <Wrapped
    className="placeholder"
    grid={
      Object {
        "columns": 1,
        "rows": 1,
      }
    }
  >
    <Wrapped
      categoryId="1"
      choiceIndex={0}
      correct={false}
      key="0"
    />
  </Wrapped>
</div>
`;

exports[`category snapshots renders 1`] = `
<div
  className="category"
>
  <WithStyles(Typography)
    className="label"
  >
    <span
      dangerouslySetInnerHTML={
        Object {
          "__html": "Category Label",
        }
      }
    />
  </WithStyles(Typography)>
  <Wrapped
    className="placeholder"
    grid={
      Object {
        "columns": 1,
        "rows": 1,
      }
    }
  />
</div>
`;
